--- a/package.json
+++ b/package.json
@@ -1,13 +1,18 @@
 {
   "name": "ecommerce",
+  "proxy": "http://localhost:8080/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^1.7.9",
     "cra-template": "1.2.0",
     "ecommerce": "file:",
     "react": "^18.0.0",
     "react-bootstrap": "^2.10.7",
     "react-dom": "^18.0.0",
+    "react-router": "^7.1.1",
+    "react-router-bootstrap": "^0.26.3",
+    "react-router-dom": "^6.28.1",
     "react-scripts": "5.0.1"
   },
   "scripts": {
