--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "ecommerce",
-  "proxy": "http://localhost:8080/",
+  "proxy": "http://localhost:8000/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "axios": "^1.7.9",
     "cra-template": "1.2.0",
     "ecommerce": "file:",
+    "http-proxy-middleware": "^3.0.3",
     "react": "^18.0.0",
     "react-bootstrap": "^2.10.7",
     "react-dom": "^18.0.0",
