--- a/package.json
+++ b/package.json
@@ -7,14 +7,16 @@
     "axios": "^1.7.9",
     "cra-template": "1.2.0",
     "ecommerce": "file:",
-    "http-proxy-middleware": "^3.0.3",
     "react": "^18.0.0",
     "react-bootstrap": "^2.10.7",
     "react-dom": "^18.0.0",
+    "react-redux": "^9.2.0",
     "react-router": "^7.1.1",
     "react-router-bootstrap": "^0.26.3",
     "react-router-dom": "^6.28.1",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "redux": "^5.0.1",
+    "redux-thunk": "^3.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
